--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,11 @@
 	<a class="menu" href="/logout">Logout</a>
 </header>
 
-<body>
+<body ng-app="poolsApp">
+	<div class="navbar">
+	</div>
 	<div class="container">
-		<img src="/public/img/clementine_150.png" />
+		<!--img src="/public/img/clementine_150.png" /-->
 		<br />
 		<p class="clementine-text">Clementine.js</p>
 	</div>
@@ -34,11 +36,12 @@
 			<button class="btn btn-delete">RESET</button>
 		</div>
 	</div>
+	<pools-list></pools-list>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js" integrity="sha256-tyfWW2LtJQNI+l3F0h6xDV/ij6Mfn8lwSKHWOsmEgXM=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js" integrity="sha256-tyfWW2LtJQNI+l3F0h6xDV/ij6Mfn8lwSKHWOsmEgXM=" crossorigin="anonymous"></script>	
 	<script type="text/javascript" src="public/js/app.js"></script>
-	<script type="text/javascript" src="controllers/userController.client.js"></script>
+	<script type="text/javascript" src="public/js/components/poolsList.js"></script>
 </body>
 
 </html>
